- made right swipe highlight when next swipe will generate - added a swipe counter below right swipe (could add a toggle for displaying it later) - removed spammy console.logs from expressions index.js - swipes no longer trigger under the following conditions: - - when an input it focused - - when character_popup or history popup are visible - - when send_textarea has something typed into it (I think this a bit too restrictive, may seek a smarter way to handle it)
ISSUE: Pyg repeating gens cause swipes animation to lag/freeze
not sure what is the cause, but should seek to remedy somehow.

--- a/public/style.css
+++ b/public/style.css
@@ -383,6 +383,15 @@ code {
     height: 30px;
     width: 30px;
 }
+.swipes-counter{
+display: inline;
+height: 15px;
+width: 30px;
+color: white;
+position: fixed;
+border: 1px solid red;
+font-size: 12px;
+}
 
 .swipe_left {
     left: 20px;
